# poker-beginner

./: .gitignore  Cargo.toml
rs-poker/benches/: game.rs  holdem_starting_hand.rs  iter.rs  parse.rs  rank.rs
rs-poker/examples/: game_simulate.rs
rs-poker/src/core/: card.rs  card_iter.rs  deck.rs  flat_deck.rs  hand.rs  rank.rs
rs-poker/src/holdem/: monte_carlo_game.rs  parse.rs  starting_hand.rs
src/: main.rs
