[package]
name = "poker-calculator"
version = "0.1.0"
authors = ["0x317374 <0x317374@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_poker = { path = "./rs-poker" }
rayon = "1.2.1"
lambda_runtime = "0.2.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
simple_logger = "1.3.0"
log = "0.4"

[[bin]]
name = "bootstrap"
path = "src/main.rs"